plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
    id 'org.springframework.boot' version '3.1.5'
    id 'io.spring.dependency-management' version '1.1.3'
}

group 'pl.edu.agh.to2'
version '1.0-SNAPSHOT'

apply plugin: 'org.openjfx.javafxplugin'

repositories {
    mavenCentral()
}

application {
    mainClassName = 'Main'
}
java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

javafx {
    version = '21'
    modules = ['javafx.base', 'javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.media', 'javafx.swing', 'javafx.web']
}

test {
    useJUnitPlatform()
}

dependencies {
    // --------------- MAIN ------------------
    // spring boot
    implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // databases
    implementation 'com.microsoft.sqlserver:mssql-jdbc'
    runtimeOnly 'com.h2database:h2'

    // lombok for src compilation
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // --------------- TESTS -----------------
    // spring boot and database for tests
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'com.h2database:h2'

    // lombok for tests
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.named('bootBuildImage') {
    builder = 'paketobuildpacks/builder-jammy-base:latest'
}
